RESOLVED FIXED195381
Followups to (r242306): Use LockHolder instead of std::lock_guard on Remote Inspector Locks
https://bugs.webkit.org/show_bug.cgi?id=195381
Summary Followups to (r242306): Use LockHolder instead of std::lock_guard on Remote I...
Christopher Reid
Reported 2019-03-06 14:51:03 PST
In https://bugs.webkit.org/show_bug.cgi?id=193806, Don and Devin suggested to use `WTF::LockHolder` instead of `std::lock_guard` for the remote inspector Locks. Darin also mentioned that `struct sockaddr_in address = { }` will initialize the struct without memset.
Attachments
Patch (25.38 KB, patch)
2019-03-06 15:07 PST, Christopher Reid
no flags
Christopher Reid
Comment 1 2019-03-06 15:07:06 PST
Mark Lam
Comment 2 2019-03-06 15:12:04 PST
Comment on attachment 363798 [details] Patch r=me
WebKit Commit Bot
Comment 3 2019-03-06 16:06:53 PST
Comment on attachment 363798 [details] Patch Clearing flags on attachment: 363798 Committed r242576: <https://trac.webkit.org/changeset/242576>
WebKit Commit Bot
Comment 4 2019-03-06 16:06:54 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-03-06 16:07:46 PST
Note You need to log in before you can comment on or make changes to this bug.